<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_attachments__open_all_media" android:title="@string/open_all_media" app:showAsAction="never" />
    <item android:id="@id/menu_attach_video__download" android:title="@string/save_to_gallery" app:showAsAction="never" />
    <item android:id="@id/menu_attach_video__download_cancel" android:title="@string/video_download_cancel" app:showAsAction="never" />
    <item android:id="@id/menu_attach_video__send_video" android:title="@string/send_video" app:showAsAction="never" />
    <item android:id="@id/menu_attachments__forward" android:title="@string/forward_message" app:showAsAction="never" />
    <item android:id="@id/menu_attach_video__go_to_message" android:title="@string/go_to_message" app:showAsAction="never" />
    <item android:id="@id/menu_attachments__share" android:title="@string/share" app:showAsAction="never" />
    <item android:id="@id/menu_attach_video__audio_tracks" android:title="@string/audio_tracks" app:showAsAction="never" />
    <item android:icon="@drawable/ic_pip_24" android:id="@id/menu_attachments__to_pip_mode" android:title="@string/video_slide_pip" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_rotate_phone_24" android:id="@id/menu_attachments__rotate_screen" android:title="@string/act_local_media_view__rotate" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_open_in_new_24" android:id="@id/menu_attachments__open_in" android:title="@string/video_open_in" app:showAsAction="ifRoom" />
</menu>
