<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_attachments__open_all_media" android:title="@string/open_all_media" app:showAsAction="never" />
    <item android:id="@id/menu_attachments__save_to_gallery" android:title="@string/save_to_gallery" app:showAsAction="never" />
    <item android:id="@id/menu_attachments__send_photo" android:title="@string/send_photo" app:showAsAction="never" />
    <item android:id="@id/menu_attachments__forward" android:title="@string/forward_message" app:showAsAction="never" />
    <item android:id="@id/menu_attachments__go_to_message" android:title="@string/go_to_message" app:showAsAction="never" />
    <item android:id="@id/menu_attachments__share" android:title="@string/share" app:showAsAction="never" />
    <item android:icon="@drawable/ic_rotate_phone_24" android:id="@id/menu_attachments__rotate_screen" android:title="@string/video_quality" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_open_in_new_24" android:id="@id/menu_attachments__open_in" android:title="@string/video_open_in" app:showAsAction="ifRoom" />
</menu>
