<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center_vertical" android:id="@id/view_audio_listen__btn_close" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/delete_outline_24" android:contentDescription="@string/audio_record_cancel" />
    <LinearLayout android:id="@id/view_audio_listen__container" android:padding="6.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="36.0dip" android:layout_weight="1.0" android:layout_marginStart="2.0dip" android:layout_marginEnd="6.0dip">
        <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center_vertical" android:id="@id/view_audio_listen__btn_play" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@string/audio_record_play" />
        <ProgressBar android:layout_gravity="center" android:id="@id/view_audio_listen__progress" android:padding="4.0dip" android:visibility="gone" android:layout_width="24.0dip" android:layout_height="24.0dip" android:indeterminate="true" />
        <ru.ok.messages.views.widgets.audiowave.AudioWaveView android:layout_gravity="center_vertical" android:id="@id/view_audio_listen__wave" android:layout_width="0.0dip" android:layout_height="16.0dip" android:layout_weight="1.0" android:layout_marginStart="12.0dip" android:layout_marginEnd="12.0dip" />
        <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="center_vertical" android:id="@id/view_audio_listen__tv_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center_vertical" android:id="@id/view_audio_listen__btn_send" android:layout_width="36.0dip" android:layout_height="36.0dip" android:contentDescription="@string/audio_record_send" android:layout_marginStart="6.0dip" />
</merge>
