<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center|bottom" android:background="@color/transparent" android:layout_width="@dimen/picker_width" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.MaterialToolbar android:id="@id/toolbar" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="?actionBarSize" android:elevation="0.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:navigationIcon="@drawable/ic_back_24" app:title="@string/scheduled_send_messages_title" app:titleCentered="true" app:titleTextAppearance="@style/ScheduledSendPickerDialog.TextAppearance.Title" />
    <ru.ok.tamtam.messages.scheduled.DateTimePicker android:id="@id/date_time_picker" android:layout_width="0.0dip" android:layout_height="@dimen/picker_height" app:layout_constraintEnd_toEndOf="@id/send_button" app:layout_constraintStart_toStartOf="@id/send_button" app:layout_constraintTop_toBottomOf="@id/toolbar" app:layout_constraintWidth_min="320.0dip" />
    <View android:id="@id/date_picker_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/date_time_picker" />
    <androidx.appcompat.widget.AppCompatCheckBox android:textSize="15.0sp" android:id="@id/send_with_notification_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="12.0dip" android:checked="true" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/scheduled_send_messages_send_with_notification" android:includeFontPadding="false" android:translationX="-5.0dip" app:layout_constraintStart_toStartOf="@id/send_button" app:layout_constraintTop_toBottomOf="@id/date_time_picker" />
    <androidx.appcompat.widget.AppCompatTextView android:id="@id/set_correct_time" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/scheduled_message_set_correct_time" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/send_with_notification_checkbox" />
    <ru.ok.utils.widgets.LongRoundedTitleSubtitleButton android:textColor="@color/white" android:id="@id/send_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="24.0dip" android:minHeight="50.0dip" android:textAllCaps="false" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/set_correct_time" app:layout_constraintWidth_max="@dimen/picker_max_width" app:lrts_title="@string/scheduled_send_messages_send_button_title" />
</androidx.constraintlayout.widget.ConstraintLayout>
