<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/view_audio_record__root_panel" android:focusable="false" android:clickable="true" android:layout_width="fill_parent" android:layout_height="48.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <LinearLayout android:gravity="start|center" android:orientation="horizontal" android:id="@id/view_audio_record__duration_panel" android:layout_width="wrap_content" android:layout_height="fill_parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <View android:id="@id/view_audio_record__red_dot" android:background="@drawable/red_circle" android:layout_width="8.0dip" android:layout_height="8.0dip" android:layout_marginStart="13.0dip" />
            <androidx.appcompat.widget.AppCompatTextView android:id="@id/view_audio_record__tv_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/audio_record_duration_00" android:layout_marginStart="7.0dip" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/view_audio_record__tv_click_cancel" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/audio_record_click_to_cancel" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/view_audio_record__slide_panel" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatImageView android:id="@id/view_audio_record__im_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/chevron_left_12" android:contentDescription="@string/audio_record_slide_to_cancel_text" />
            <androidx.appcompat.widget.AppCompatTextView android:id="@id/view_audio_record__tv_swipe_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/audio_record_slide_to_cancel_text" android:textAlignment="center" android:layout_marginStart="2.0dip" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View android:id="@id/view_audio_record__audio_circle" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="@id/view_audio_record__static_circle" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="@id/view_audio_record__static_circle" app:layout_constraintStart_toStartOf="@id/view_audio_record__static_circle" app:layout_constraintTop_toTopOf="@id/view_audio_record__static_circle" />
    <View android:id="@id/view_audio_record__static_circle" android:visibility="gone" android:layout_width="@dimen/audio_record_static_circle_size" android:layout_height="@dimen/audio_record_static_circle_size" app:layout_constraintBottom_toBottomOf="@id/frg_chat__iv_icon" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="@id/frg_chat__iv_icon" app:layout_constraintStart_toStartOf="@id/frg_chat__iv_icon" app:layout_constraintTop_toTopOf="@id/frg_chat__iv_icon" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/frg_chat__iv_icon" android:padding="6.0dip" android:clickable="false" android:layout_width="36.0dip" android:layout_height="36.0dip" android:src="@drawable/icon_microphone_24" android:contentDescription="@string/audio_record_start" android:layout_marginEnd="6.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/view_audio_record__root_panel" />
</merge>
