<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:theme="@style/Theme.MaterialComponents" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:elevation="6.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Group android:id="@id/layout_send_location__live_group" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" app:constraint_referenced_ids="         layout_send_location__tv_pick_duration,         layout_send_location__cancel_button,         layout_send_location__cp_duration" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/font_small" android:typeface="normal" android:ellipsize="end" android:gravity="center" android:id="@id/layout_send_location__tv_pick_duration" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/live_location_choose_time" android:maxLines="1" android:singleLine="true" android:includeFontPadding="false" android:fontFamily="sans-serif" android:textAlignment="center" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageButton android:id="@id/layout_send_location__cancel_button" android:background="@null" android:padding="4.0dip" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginTop="4.0dip" android:src="@drawable/ic_cross_16" android:scaleType="fitCenter" android:contentDescription="@string/cancel" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.chip.ChipGroup android:id="@id/layout_send_location__cp_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="6.0dip" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" app:chipSpacing="8.0dip" app:layout_constraintBottom_toTopOf="@id/layout_send_location__send_button" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/layout_send_location__tv_pick_duration" app:singleLine="true" app:singleSelection="true">
        <com.google.android.material.chip.Chip android:textSize="12.0sp" android:textStyle="normal" android:gravity="center" android:id="@id/layout_send_location__duration_20m" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-medium" android:textAlignment="center" app:textEndPadding="8.0dip" app:textStartPadding="8.0dip" style="@style/Widget.MaterialComponents.Chip.Choice" />
        <com.google.android.material.chip.Chip android:textSize="12.0sp" android:textStyle="normal" android:gravity="center" android:id="@id/layout_send_location__duration_1h" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-medium" android:textAlignment="center" app:textEndPadding="8.0dip" app:textStartPadding="8.0dip" style="@style/Widget.MaterialComponents.Chip.Choice" />
        <com.google.android.material.chip.Chip android:textSize="12.0sp" android:textStyle="normal" android:gravity="center" android:id="@id/layout_send_location__duration_3h" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-medium" android:textAlignment="center" app:textEndPadding="8.0dip" app:textStartPadding="8.0dip" style="@style/Widget.MaterialComponents.Chip.Choice" />
        <com.google.android.material.chip.Chip android:textSize="12.0sp" android:textStyle="normal" android:gravity="center" android:id="@id/layout_send_location__duration_24h" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-medium" android:textAlignment="center" app:textEndPadding="8.0dip" app:textStartPadding="8.0dip" style="@style/Widget.MaterialComponents.Chip.Choice" />
        <com.google.android.material.chip.Chip android:textSize="12.0sp" android:textStyle="normal" android:gravity="center" android:id="@id/layout_send_location__duration_no_limit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/live_location_time_no_limit" android:fontFamily="sans-serif-medium" android:textAlignment="center" app:textEndPadding="8.0dip" app:textStartPadding="8.0dip" style="@style/Widget.MaterialComponents.Chip.Choice" />
    </com.google.android.material.chip.ChipGroup>
    <one.me.sdk.uikit.common.button.OneMeTitleSubtitleButton android:id="@id/layout_send_location__send_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="12.0dip" android:contentDescription="@string/send_live_location" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
